@@ -10,6 +10,7 @@ Fixes:
    * Correctly handle failure case in _x11_notify_handler_image.
    * Fix missuse of EINA_INLIST_FOREACH in elm_transit.c.
    * Now, dummy object is always smart member of naviframe.
+   * Fix the popup that returned invalid action buttons.
 
 
 Elementary 1.7.3
